--- a/docs/life/essay/20241202-thingk.md
+++ b/docs/life/essay/20241202-thingk.md
@@ -28,4 +28,20 @@
 
 下面再补充一些回顾的东西，等我有空再更~
 
+---------- 更新 ----------
+
+下面是书里总结的十大要点
+1. 产品管理的职责：专注于自己的事情，不要插手无关的事
+2. 用户体验：用户体验就是产品的生命
+3. 机会评估：用方便快捷的机会评估方法取代过时的市场需求文档。动手设计产品前，先明确产品要解决什么问题，为谁解决问题，以及评估产品的标准
+4. 特约用户：打造优秀的产品没有任何捷径，只能请用户反复试用产品，不断改进
+5. 产品原则：产品管理的主要工作内容就是制定决策。明确的产品原则可以帮助产品经理和产品团队树立清晰的价值标准，作出果断的决策
+6. 人物角色：把目标用户按照特征分类，逐一分析，理解其行为和感情，以此作为决策的依据
+7. 探索产品：产品经理的主要职责是探索有价值的、可用的、可行的产品
+8. 使用原则：使用高保真原型是探索产品的关键。原因如下：
+  1. 迫使产品经理深入定义解决方案
+  2. 可以让真实的用户参与测试、验证产品创意
+  3. 可以直观向团队展示产品的设计思路
+9. 用户参与原型测试：原型测试是所有产品经理和产品设计师都必须掌握的工作技能。获取有效的用户反馈是产品经理最重要的工作
+10. 根据数据改进产：改进产品不是根据客户的要求一味的新增功能，而是根据产品的实际使用情况，不断的提升产品的各项指标，逐步完善产品
  
